use augeas for xml edit add xmlput.sh add diffwrap.sh removed diffsed dockerfile-base runs as root, others as selected user removed unnecessary chowns ensure install dirs exist in _system.sh default to localhost:8080 fix bash profile paths not using sudo add new jvm flags (gc, urandom) fix paths with spaces in findreplace.sh sourcing profile properly in install.sh removed sh debug flags fixed manual unpack of cas war fixed xml fragment inserts in patch install.sh moved patch11 fragments from patch_xml folder to fragments folder