@@ -4,35 +4,30 @@ echo tomcat
 # unpack
 cd /tmp
 gunzip < /kits/apache-tomcat-7.0.62.tar.gz | tar xf -
-mkdir -p $V_TOMCAT_INSTALLDIR
 cd apache-tomcat-7.0.62
 mv * $V_TOMCAT_INSTALLDIR
-chown -R $V_UNIXUSER:$V_UNIXGROUP $V_TOMCAT_INSTALLDIR
 
-# profile
-echo "PATH=$V_TOMCAT_INSTALLDIR/bin:\$PATH" >> $V_UNIXUSERHOME/.bash_profile
-echo "CATALINA_PID=$V_TOMCAT_INSTALLDIR/catalina.pid" >> $V_TOMCAT_INSTALLDIR/bin/setenv.sh
-echo "CLASSPATH=$V_SITES_INSTALLDIR/bin" >> $V_TOMCAT_INSTALLDIR/bin/setenv.sh
-echo 'JAVA_OPTS=" -Djava.security.egd=file:/dev/./urandom -Djava.net.preferIPv4Stack=true -Dfile.encoding=UTF-8 -Xmx512m -XX:MaxPermSize=256m -Dnet.sf.ehcache.enableShutdownHook=true "' >> $V_TOMCAT_INSTALLDIR/bin/setenv.sh
+# tomcat env
+f=$V_TOMCAT_INSTALLDIR/bin/setenv.sh
+/vagrant/scripts/diffwrap.sh $f echo "CATALINA_PID=$V_TOMCAT_INSTALLDIR/catalina.pid >> $f"
+/vagrant/scripts/diffwrap.sh $f echo "CLASSPATH=$V_SITES_INSTALLDIR/bin >> $f"
+/vagrant/scripts/diffwrap.sh $f echo "CATALINA_OPTS=\' -Xloggc:$V_TOMCAT_INSTALLDIR/logs/verbosegc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -verbose:gc -Djava.security.egd=file:/dev/./urandom -Djava.net.preferIPv4Stack=true -Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=512m -Dnet.sf.ehcache.enableShutdownHook=true \' >> $f"
 
 # tomcat gui user
-sed -i '36i\
-<role rolename="manager-gui"/> \
-<role rolename="admin-gui"/> \
-<user username="tomcat" password="pass1234" roles="manager-gui,admin-gui"/> \
-' $V_TOMCAT_INSTALLDIR/conf/tomcat-users.xml
+f=$V_TOMCAT_INSTALLDIR/conf/tomcat-users.xml 
+/vagrant/scripts/diffwrap.sh $f /vagrant/scripts/xmlput.sh $f /vagrant/scripts/fragments/tomcat_roles.xml at /tomcat-users 
 
 # datasource
-sed -i "128i\
-<Context path=\"/cs\" docBase=\"cs\" reloadable=\"true\" crossContext=\"true\"> \
-<Resource name=\"csDataSource\" auth=\"Container\" type=\"javax.sql.DataSource\" \
-maxActive=\"50\" maxIdle=\"10\" username=\"sa\" password=\"\" \
-driverClassName=\"org.hsqldb.jdbcDriver\" \
-url=\"jdbc:hsqldb:$V_SITES_INSTALLDIR/hsqldb/csdb\"/> \
-</Context>\
-" $V_TOMCAT_INSTALLDIR/conf/server.xml
+f=$V_TOMCAT_INSTALLDIR/conf/server.xml 
+/vagrant/scripts/diffwrap.sh $f /vagrant/scripts/xmlput.sh $f /vagrant/scripts/fragments/csdb.xml at //Host
 
-sed -i "s/<Connector port=\"8080\"/<Connector port=\"$V_PORT\"/g" $V_TOMCAT_INSTALLDIR/conf/server.xml
+# port
+f=$V_TOMCAT_INSTALLDIR/conf/server.xml
+/vagrant/scripts/diffwrap.sh $f sed -i "s/8080/$V_PORT/" $f
 
 # tools.jar
 cp $V_JDK_INSTALLDIR/lib/tools.jar $V_TOMCAT_INSTALLDIR/lib
+
+# profile
+f=$V_UNIXUSERHOME/.bash_profile
+/vagrant/scripts/diffwrap.sh $f "echo export PATH=$V_TOMCAT_INSTALLDIR/bin:'$'PATH >> $f"
